<resources>
    <string name="app_name">Lumi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="beranda">Beranda</string>
    <string name="qris">QRIS</string>
    <string name="qris_symbol">QRIS Symbol</string>
    <string name="qr">QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="tunjukan_qr">Tunjukan QR</string>
    <string name="akun">Akun</string>
    <string name="selamat_pagi">Selamat Datang,</string>
    <string name="dummy_name">User</string>
    <string name="dummy_acc_number">0000000000</string>
    <string name="dummy_account_balance">0.0</string>
    <string name="transfer">Transfer</string>
    <string name="mutasi">Mutasi</string>
    <string name="rp">Rp</string>
    <string name="bayar_listrik">Bayar Listrik</string>
    <string name="bayar">Bayar</string>
    <string name="saldo">Saldo</string>
    <string name="beli_pulsa">Beli Pulsa</string>
    <string name="beli_paket_data">Beli Paket Data</string>
    <string name="ewallet">EWallet</string>
    <string name="gallery_button">Tombol Galeri</string>
    <string name="flash_button">Tombol Flash</string>
    <string name="censored_account_no">7293 **** **** 9283</string>
    <string name="balance_toggle_button">Balance Toggle Button</string>
    <string name="tunjukan_qr_untuk_membayar">Tunjukkan QR untuk membayar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lumi">Lumi</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="rifky_eky">Rifky Eky</string>
    <string name="rifkyeky_gmail_com">rifkyeky@gmail.com</string>
    <string name="_62_81_56">+62 81*******56</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="profil_pengguna">Gambar Profil Pengguna</string>
    <string name="edit_profil">Ubah Profil</string>
    <string name="tunjukan_qr_untuk">Menampilkan QR untuk</string>
    <string name="menerima_transfer">Menerima Transfer</string>
    <string name="fitur_ini_akan_segera_hadir">fitur ini akan segera hadir</string>
    <string name="kembali">kembali</string>
    <string name="qr_scanner">qr scanner</string>
    <string name="tombol_kembali">tombol kembali</string>
    <string name="nomor_akun">nomor akun\n</string>
    <string name="nominal_saldo">nominal saldo</string>
    <string name="menampilkan_qr_untuk_membayar_atau_menerima_transfer">menampilkan QR untuk membayar atau menerima transfer</string>
    <string name="dummy_balance">0.0</string>
    <string name="tampilkan_saldo">Tampilkan Saldo</string>
    <string name="sembunyikan_saldo">Sembunyikan Saldo</string>
    <string name="tampilkan_nomor_rekening">Tampilkan Nomor Rekening</string>
</resources>