<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:padding="20dp"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    tools:context=".presentation.ui.qris.ShowQrisFragment">

    <ImageView
        android:id="@+id/lumiLogo"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:contentDescription="@string/lumi"
        android:src="@drawable/logo_lumi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/accountNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:fontFamily="@font/calibri"
        android:textColor="@color/primary_darkBlue"
        android:text="@string/censored_account_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lumiLogo"/>

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:fontFamily="@font/calibri"
        android:textColor="@color/primary_darkBlue"
        android:text="@string/saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountNo"/>

    <TextView
        android:id="@+id/ammount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:fontFamily="@font/calibri"
        android:textColor="@color/primary_blue"
        android:text="@string/dummy_account_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTextView"/>

    <ImageView
        android:id="@+id/iv_toggle_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/balance_toggle_button"
        android:src="@drawable/ic_visibility_on"
        app:layout_constraintBottom_toBottomOf="@id/ammount"
        app:layout_constraintStart_toEndOf="@id/ammount"
        app:layout_constraintTop_toTopOf="@id/ammount"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/showQrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/calibri"
        android:text="@string/tunjukan_qr_untuk"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/tvGet"

        app:layout_constraintTop_toBottomOf="@+id/ammount" />

    <TextView
        android:id="@+id/tvGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri"
        android:textSize="17sp"
        android:layout_marginEnd="16dp"
        android:text="@string/menerima_transfer"
        app:layout_constraintEnd_toEndOf="@+id/qrImageView"
        app:layout_constraintTop_toTopOf="@+id/showQrTextView" />
    
    <ImageView
        android:id="@+id/qrImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/qr"
        android:src="@drawable/qr_code_dark"
        app:layout_constraintTop_toBottomOf="@id/showQrTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/qris_symbol"
        android:src="@drawable/qris_dark"
        app:layout_constraintTop_toBottomOf="@+id/qrImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>