<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/tv_good_morning"
        style="@style/RegulerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/selamat_pagi"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toStartOf="@id/tv_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/RegulerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_name"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_good_morning"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/acc_layout"
        android:layout_width="364dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_acc_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <TextView
            android:id="@+id/tv_acc_name"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/dummy_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_acc_number"
            style="@style/RegulerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_acc_number"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_acc_name"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_name" />

        <TextView
            android:id="@+id/tv_rp"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_acc_number"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_number" />

        <TextView
            android:id="@+id/tv_acc_balance"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/dummy_account_balance"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tv_rp"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_number" />

        <ImageView
            android:id="@+id/toggle_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_visibility_on"
            app:layout_constraintBottom_toBottomOf="@id/tv_acc_balance"
            app:layout_constraintStart_toEndOf="@id/tv_acc_balance"
            app:layout_constraintTop_toTopOf="@id/tv_acc_balance"
            app:layout_constraintVertical_bias="0.428" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transfer"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_blue"
            android:contentDescription="@string/transfer"
            android:text="@string/transfer"
            android:textSize="10sp"
            app:cornerRadius="11dp"
            app:layout_constraintStart_toStartOf="@id/tv_rp"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_balance" />

        <!--        <Button-->
        <!--            android:id="@+id/btn_history"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="32dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:background="@drawable/btn_outlined"-->
        <!--            android:text="@string/riwayat"-->
        <!--            android:textSize="10sp"-->
        <!--            app:layout_constraintStart_toEndOf="@id/btn_transfer"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_acc_balance" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mutasi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/mutasi"
            android:text="@string/mutasi"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:cornerRadius="11dp"
            app:layout_constraintStart_toEndOf="@id/btn_transfer"
            app:layout_constraintTop_toBottomOf="@id/tv_acc_balance"
            app:strokeColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_electric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/bayar_listrik"
        android:src="@drawable/ic_listrik"
        app:layout_constraintEnd_toStartOf="@id/btn_pulsa"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/acc_layout"
        app:layout_constraintTop_toBottomOf="@+id/acc_layout" />

    <ImageView
        android:id="@+id/btn_pulsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/beli_pulsa"
        android:src="@drawable/ic_pulsa"
        app:layout_constraintEnd_toStartOf="@id/btn_data"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/btn_electric"
        app:layout_constraintTop_toBottomOf="@+id/acc_layout" />

    <ImageView
        android:id="@+id/btn_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/beli_paket_data"
        android:src="@drawable/ic_data"
        app:layout_constraintEnd_toStartOf="@id/btn_ewallet"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/btn_pulsa"
        app:layout_constraintTop_toBottomOf="@+id/acc_layout" />

    <ImageView
        android:id="@+id/btn_ewallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/ewallet"
        android:src="@drawable/ic_e_wallet"
        app:layout_constraintEnd_toEndOf="@id/acc_layout"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/btn_data"
        app:layout_constraintTop_toBottomOf="@+id/acc_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>