<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.qris.QrisFragment">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonVisible="false"
        app:flashButtonVisible="false"
        app:frameColor="@android:color/white"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="#0000ffff" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topCardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:id="@+id/btn_back"
                android:background="@drawable/circular_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/baseline_arrow_back_ios_new_24"
                android:clickable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr"
                android:textSize="24sp"
                android:fontFamily="@font/calibri"
                android:textStyle="bold"
                android:textColor="@color/primary_blue"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanQRButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/scan_qr"
        style="@style/PrimaryActiveButton"
        app:layout_constraintTop_toBottomOf="@id/topCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:contentDescription="@string/qris_symbol"
        android:src="@drawable/qris_white"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomCardView"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@mipmap/flash_on_round"
        android:contentDescription="@string/flash_button"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomCardView"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/galleryButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@mipmap/gallery_round"
        android:contentDescription="@string/gallery_button"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomCardView"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/showQRTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunjukan_qr"
                android:textSize="20sp"
                android:fontFamily="@font/calibri"
                android:textColor="@color/primary_blue"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/payButton"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/bayar"
                android:textSize="17sp"
                app:cornerRadius="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary_blue"
                app:strokeColor="@color/primary_blue"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toBottomOf="@+id/showQRTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/transferButton"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/transfer"
                android:textSize="17sp"
                app:cornerRadius="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary_blue"
                app:strokeColor="@color/primary_blue"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toBottomOf="@+id/showQRTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>